# pycligen

./: Makefile.in  README.md  cligen.py  cligen_tutorial.py  configure.ac  hello.py  py_cligen.c  py_cligen_cv.c  py_cligen_pt.c  py_cligen_pt.h  pycligen.c  pycligen.h  pycligen_config.h.in  pycligen_cv.c  pycligen_cv.h  pycligen_cvec.c  pycligen_cvec.h  pycligen_pt.c  pycligen_pt.h  setup.py  tutorial.cli
